Get data from WX api

--- a/home.html
+++ b/home.html
@@ -41,6 +41,13 @@
                 <div class="card-container">
                     <div class="weather-info">
                         <h3>Current Weather Alerts</h3>
+                        <section id="areaDesc"></section>
+                        <section id="description"></section>
+                        <section id="certainty"></section>
+                        <section id=""></section>
+                        <section id="areaDesc"></section>
+                        <section id="areaDesc"></section>
+                        <section id="areaDesc"></section>
                     </div>
                 </div>
                 <div class="card-container">
