--- a/about.html
+++ b/about.html
@@ -9,6 +9,11 @@
 <body>
     <a href="home.html">Home</a>
     <h1>About</h1>
+    <p>Here's some random body about me that goes on and on and on</p>
+    <p>
+        I am a software engineer with a passion for creating beautiful and functional web applications. In my free time, I enjoy learning new programming languages and frameworks, and experimenting with different technologies. I am always looking for new challenges and opportunities to grow as a developer. When I'm not coding, I enjoy spending time with my family, hiking, and trying out new restaurants.
+    </p>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="javascript/main.js"></script>
