--- a/contact-me.html
+++ b/contact-me.html
@@ -15,6 +15,37 @@
         <p>St. George, UT</p>
         <p>email@example.com</p>
     </address>
+    <form>
+        <div class="contact-form-group">
+            <label for="InputName">Full Name</label>
+            <input type="text" class="form-control" id="InputName" placeholder="Enter full name">
+          </div>
+        <div class="contact-form-group">
+          <label for="InputEmail1">Email address</label>
+          <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="contact-form-group">
+            <label for="InputCategory">Category</label>
+            <div class="contact-form-group form-check">
+                <input type="checkbox" class="form-check-input" id="category">
+                <label class="form-check-label" for="category">Question</label>
+            </div>
+            <div class="contact-form-group form-check">
+                <input type="checkbox" class="form-check-input" id="category">
+                <label class="form-check-label" for="category">Feature Request</label>
+            </div>
+            <div class="contact-form-group form-check">
+                <input type="checkbox" class="form-check-input" id="category">
+                <label class="form-check-label" for="category">Bug Report</label>
+            </div>
+
+            <div class="contact-form-group">
+                <label for="InputMessage">Message</label>
+                <input type="text" class="form-control" id="InputMessage" placeholder="Enter message">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="javascript/main.js"></script>
