--- a/home.html
+++ b/home.html
@@ -16,9 +16,9 @@
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button> <!-- Close button for the menu -->
             </div>
             <div class="offcanvas-body">
-                <a href="faq.html" target="_blank">FAQs</a>
-                <a href="about.html" target="_blank">About</a>
-                <a href="contact-me.html" target="_blank">Contact</a>
+                <a href="faq.html" >FAQs</a>
+                <a href="about.html" >About</a>
+                <a href="contact-me.html" >Contact</a>
             </div>
         </div>
     </nav>
@@ -57,10 +57,6 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
         </div>
-        <!-- <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div> -->
       </div>
     </div>
   </div>
