Add forgot password

--- a/home.html
+++ b/home.html
@@ -54,6 +54,9 @@
                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
                   <label class="form-check-label" for="exampleCheck1">Remember Me</label>
                 </div>
+                <div class="form-group">
+                    <button type="forgotPassword" class="btn btn-link">Forgot Password?</button>
+                </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
         </div>
